[gd_scene load_steps=38 format=3 uid="uid://ddq6c3gf424ev"]

[ext_resource type="Script" path="res://scripts/level_scripts/level_03.gd" id="1_mwwwp"]
[ext_resource type="Texture2D" uid="uid://5xqr3wq4x033" path="res://graphics/backgrounds/game_background.png" id="1_q4k1m"]
[ext_resource type="Texture2D" uid="uid://b7rylkuhvcduo" path="res://graphics/backgrounds/cyberpunk/border.png" id="2_o3aod"]
[ext_resource type="PackedScene" uid="uid://54q1fxqrmf8c" path="res://components/challenge_description_component.tscn" id="3_fcou2"]
[ext_resource type="PackedScene" uid="uid://cdgadr78q5tt8" path="res://components/code_editor.tscn" id="4_tjm7a"]
[ext_resource type="Texture2D" uid="uid://cxores37hbu7x" path="res://graphics/backgrounds/pirate/pirate_background.png" id="5_hyn4v"]
[ext_resource type="Texture2D" uid="uid://cvsb5o1n6hekw" path="res://graphics/characters/enemies/kraken.png" id="7_3nqar"]
[ext_resource type="AudioStream" uid="uid://dkg2h5iaqmtlj" path="res://audio/kraken.wav" id="8_1c5hd"]
[ext_resource type="Script" path="res://scripts/code_editor/data_handler.gd" id="9_gn4v6"]
[ext_resource type="Texture2D" uid="uid://d1q8rvsxrfsln" path="res://graphics/characters/travelers/pirate_ship.png" id="10_cpog7"]
[ext_resource type="Script" path="res://scripts/level_03_visuals/level3_section1_visuals.gd" id="10_f7g80"]
[ext_resource type="PackedScene" uid="uid://dhj841h4w5krh" path="res://components/dialogue_balloon.tscn" id="10_fq4m8"]
[ext_resource type="Script" path="res://scripts/level_03_visuals/level3_section2_visuals.gd" id="11_3ohwv"]
[ext_resource type="Texture2D" uid="uid://cs6ht1orakfqr" path="res://graphics/backgrounds/pirate/water_sprite.png" id="11_toani"]
[ext_resource type="PackedScene" uid="uid://3l68eklct1gk" path="res://components/characters/bytebeard.tscn" id="12_6gn53"]
[ext_resource type="PackedScene" uid="uid://dh0mb5kxm1ahd" path="res://components/info_box.tscn" id="13_xh6g8"]
[ext_resource type="Script" path="res://scripts/info_box.gd" id="13_y5kr0"]
[ext_resource type="AudioStream" uid="uid://b5mvywu6pyrnm" path="res://audio/pirates.wav" id="14_3xfti"]
[ext_resource type="Script" path="res://scripts/level_03_visuals/level3_section3_visuals.gd" id="15_22omg"]
[ext_resource type="AudioStream" uid="uid://bncs577sxaoo" path="res://audio/drunkensailor.wav" id="15_meeey"]
[ext_resource type="AudioStream" uid="uid://cn6vj4ev410qa" path="res://audio/169157__joniheinonen__weather-thunder-heavy-thunder-medium-rain-courtyard-echoes-0001.wav" id="15_w7we3"]
[ext_resource type="Script" path="res://scripts/level_03_visuals/level3_section4_visuals.gd" id="16_wsjln"]
[ext_resource type="Script" path="res://scripts/visuals_handler.gd" id="20_xsjvk"]
[ext_resource type="PackedScene" uid="uid://bhighrpknnjks" path="res://components/code_evaluation_popups/popup_accepted_answer.tscn" id="22_ctva0"]
[ext_resource type="PackedScene" uid="uid://ft6ngvscr7s6" path="res://components/code_evaluation_popups/popup_wrong_answer.tscn" id="23_8fqt8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wtdj6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_cpog7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ys123"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(243, 614)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0872665]
}

[sub_resource type="Animation" id="Animation_748v1"]
resource_name = "ship_idle"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(243, 634), Vector2(243, 619), Vector2(243, 634)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0872665, 3.48787e-16, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iob3q"]
_data = {
"RESET": SubResource("Animation_ys123"),
"ship_idle": SubResource("Animation_748v1")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_ykpc8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_3nqar")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_1bgwe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.658691, 0.654785)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(932, 598)]
}

[sub_resource type="Animation" id="Animation_g7f4o"]
resource_name = "kraken_idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3.1, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.665, 0.661), Vector2(0.658691, 0.654785), Vector2(0.67, 0.666), Vector2(0.659, 0.655), Vector2(0.665, 0.661)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(932, 598), Vector2(932, 578), Vector2(932, 598)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_degax"]
_data = {
"RESET": SubResource("Animation_1bgwe"),
"kraken_idle": SubResource("Animation_g7f4o")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_16cv8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_toani")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_xri1w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_mbl6w"]
resource_name = "waterMovement"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5, 7.6, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(10, -10), Vector2(2.08165e-12, -20), Vector2(2.08165e-12, -9.6), Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mtef"]
_data = {
"RESET": SubResource("Animation_xri1w"),
"waterMovement": SubResource("Animation_mbl6w")
}

[node name="Level3" type="Node2D"]
script = ExtResource("1_mwwwp")

[node name="ContainerBackground" type="Sprite2D" parent="."]
position = Vector2(960, 528)
texture = ExtResource("1_q4k1m")

[node name="GameBackground" type="Sprite2D" parent="."]
position = Vector2(625.156, 550.93)
scale = Vector2(0.644962, 0.813822)
texture = ExtResource("5_hyn4v")

[node name="AnimationNode1" type="Node" parent="."]
script = ExtResource("10_f7g80")

[node name="Bytebeard" parent="AnimationNode1" instance=ExtResource("12_6gn53")]
z_index = 1

[node name="Dialogue" parent="AnimationNode1" instance=ExtResource("10_fq4m8")]
offset = Vector2(303, 230)
transform = Transform2D(1, 0, 0, 1, 303, 230)

[node name="InfoBox3" parent="AnimationNode1" instance=ExtResource("13_xh6g8")]
offset = Vector2(140, 229)
transform = Transform2D(1, 0, 0, 1, 140, 229)
script = ExtResource("13_y5kr0")

[node name="AnimationNode2" type="Node" parent="."]
script = ExtResource("11_3ohwv")

[node name="Ship" type="AnimatedSprite2D" parent="AnimationNode2"]
position = Vector2(243, 614)
rotation = 0.0872665
scale = Vector2(0.548828, 0.455078)
sprite_frames = SubResource("SpriteFrames_wtdj6")

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="AnimationNode2/Ship"]
position = Vector2(121.41, 156.92)
rotation = -0.0483669
scale = Vector2(1.82941, 2.20498)
skew = 0.0150989
stream = ExtResource("14_3xfti")
volume_db = -2.374
pitch_scale = 0.9
autoplay = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationNode2/Ship"]
position = Vector2(-32.4922, 68.5421)
rotation = -0.045631
scale = Vector2(1.82266, 2.19693)
skew = 0.0142462
stream = ExtResource("14_3xfti")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode2/Ship"]
libraries = {
"": SubResource("AnimationLibrary_iob3q")
}
autoplay = "ship_idle"

[node name="Kraken" type="AnimatedSprite2D" parent="AnimationNode2"]
position = Vector2(932, 598)
scale = Vector2(0.658691, 0.654785)
sprite_frames = SubResource("SpriteFrames_ykpc8")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="AnimationNode2/Kraken"]
position = Vector2(1.50928, -144.94)
scale = Vector2(1.50927, 1.51844)
stream = ExtResource("8_1c5hd")
volume_db = -5.165
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode2/Kraken"]
libraries = {
"": SubResource("AnimationLibrary_degax")
}
autoplay = "kraken_idle"
speed_scale = 0.7

[node name="CPUParticles2D" type="CPUParticles2D" parent="AnimationNode2"]
position = Vector2(595, 123)
amount = 50000
emission_shape = 3
emission_rect_extents = Vector2(600, -400)
spread = 137.17
initial_velocity_max = 91.79
angular_velocity_min = -90.43
angular_velocity_max = 132.17
linear_accel_min = -10.0
linear_accel_max = 10.0
scale_amount_min = 0.0
scale_amount_max = 2.0
color = Color(0.215686, 0.247059, 0.254902, 1)
hue_variation_min = -0.2
hue_variation_max = 0.12

[node name="AnimationNodeWater" type="Node" parent="AnimationNode2"]

[node name="Water" type="AnimatedSprite2D" parent="AnimationNode2/AnimationNodeWater"]
position = Vector2(624, 646.25)
scale = Vector2(0.626059, 0.604088)
sprite_frames = SubResource("SpriteFrames_16cv8")
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode2/AnimationNodeWater/Water"]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_7mtef")
}
autoplay = "waterMovement"
playback_default_blend_time = 5.0
speed_scale = 1.5

[node name="AnimationNode3" type="Node" parent="."]
script = ExtResource("15_22omg")

[node name="Ship" type="AnimatedSprite2D" parent="AnimationNode3"]
visible = false
position = Vector2(243, 614)
rotation = 0.0872665
scale = Vector2(0.548828, 0.455078)
sprite_frames = SubResource("SpriteFrames_wtdj6")

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="AnimationNode3/Ship"]
visible = false
position = Vector2(121.41, 156.92)
rotation = -0.0483669
scale = Vector2(1.82941, 2.20498)
skew = 0.0150989
stream = ExtResource("14_3xfti")
volume_db = -2.374
pitch_scale = 0.9
autoplay = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationNode3/Ship"]
visible = false
position = Vector2(-32.4922, 68.5421)
rotation = -0.045631
scale = Vector2(1.82266, 2.19693)
skew = 0.0142462
stream = ExtResource("14_3xfti")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode3/Ship"]
libraries = {
"": SubResource("AnimationLibrary_iob3q")
}
autoplay = "ship_idle"

[node name="Kraken" type="AnimatedSprite2D" parent="AnimationNode3"]
visible = false
position = Vector2(932, 598)
scale = Vector2(0.658691, 0.654785)
sprite_frames = SubResource("SpriteFrames_ykpc8")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="AnimationNode3/Kraken"]
position = Vector2(1.50928, -144.94)
scale = Vector2(1.50927, 1.51844)
stream = ExtResource("8_1c5hd")
volume_db = -5.165
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode3/Kraken"]
libraries = {
"": SubResource("AnimationLibrary_degax")
}
autoplay = "kraken_idle"
speed_scale = 0.7

[node name="CPUParticles2D" type="CPUParticles2D" parent="AnimationNode3"]
visible = false
position = Vector2(595, 123)
amount = 50000
emission_shape = 3
emission_rect_extents = Vector2(600, -400)
spread = 137.17
initial_velocity_max = 91.79
angular_velocity_min = -90.43
angular_velocity_max = 132.17
linear_accel_min = -10.0
linear_accel_max = 10.0
scale_amount_min = 0.0
scale_amount_max = 2.0
color = Color(0.215686, 0.247059, 0.254902, 1)
hue_variation_min = -0.2
hue_variation_max = 0.12

[node name="AnimationNodeWater" type="Node" parent="AnimationNode3"]

[node name="Water" type="AnimatedSprite2D" parent="AnimationNode3/AnimationNodeWater"]
position = Vector2(624, 646.25)
scale = Vector2(0.626059, 0.604088)
sprite_frames = SubResource("SpriteFrames_16cv8")
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode3/AnimationNodeWater/Water"]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_7mtef")
}
autoplay = "waterMovement"
playback_default_blend_time = 5.0
speed_scale = 1.5

[node name="AnimationNode4" type="Node" parent="."]
script = ExtResource("16_wsjln")

[node name="Ship" type="AnimatedSprite2D" parent="AnimationNode4"]
visible = false
position = Vector2(243, 614)
rotation = 0.0872665
scale = Vector2(0.548828, 0.455078)
sprite_frames = SubResource("SpriteFrames_wtdj6")

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="AnimationNode4/Ship"]
position = Vector2(121.41, 156.92)
rotation = -0.0483669
scale = Vector2(1.82941, 2.20498)
skew = 0.0150989
stream = ExtResource("14_3xfti")
volume_db = -2.374
pitch_scale = 0.9
autoplay = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationNode4/Ship"]
position = Vector2(-32.4922, 68.5421)
rotation = -0.045631
scale = Vector2(1.82266, 2.19693)
skew = 0.0142462
stream = ExtResource("14_3xfti")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode4/Ship"]
libraries = {
"": SubResource("AnimationLibrary_iob3q")
}
autoplay = "ship_idle"

[node name="Kraken" type="AnimatedSprite2D" parent="AnimationNode4"]
visible = false
position = Vector2(932, 598)
scale = Vector2(0.658691, 0.654785)
sprite_frames = SubResource("SpriteFrames_ykpc8")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="AnimationNode4/Kraken"]
position = Vector2(1.50928, -144.94)
scale = Vector2(1.50927, 1.51844)
stream = ExtResource("8_1c5hd")
volume_db = -5.165
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode4/Kraken"]
libraries = {
"": SubResource("AnimationLibrary_degax")
}
autoplay = "kraken_idle"
speed_scale = 0.7

[node name="CPUParticles2D" type="CPUParticles2D" parent="AnimationNode4"]
visible = false
position = Vector2(595, 123)
amount = 50000
emission_shape = 3
emission_rect_extents = Vector2(600, -400)
spread = 137.17
initial_velocity_max = 91.79
angular_velocity_min = -90.43
angular_velocity_max = 132.17
linear_accel_min = -10.0
linear_accel_max = 10.0
scale_amount_min = 0.0
scale_amount_max = 2.0
color = Color(0.215686, 0.247059, 0.254902, 1)
hue_variation_min = -0.2
hue_variation_max = 0.12

[node name="AnimationNodeWater" type="Node" parent="AnimationNode4"]

[node name="Water" type="AnimatedSprite2D" parent="AnimationNode4/AnimationNodeWater"]
visible = false
position = Vector2(624, 646.25)
scale = Vector2(0.626059, 0.604088)
sprite_frames = SubResource("SpriteFrames_16cv8")
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationNode4/AnimationNodeWater/Water"]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_7mtef")
}
autoplay = "waterMovement"
playback_default_blend_time = 5.0
speed_scale = 1.5

[node name="DataHandler" type="Node" parent="."]
script = ExtResource("9_gn4v6")

[node name="GameBorder" type="Sprite2D" parent="."]
position = Vector2(624.488, 556.876)
scale = Vector2(1.29178, 1.25417)
texture = ExtResource("2_o3aod")

[node name="Node" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(284, 690)
rotation = -0.303687
stream = ExtResource("15_meeey")
volume_db = -9.0
pitch_scale = 1.1
autoplay = true
attenuation = 1.51572

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(593, 88)
stream = ExtResource("15_w7we3")
autoplay = true

[node name="Timer" type="Timer" parent="."]

[node name="CodePrompt" parent="." instance=ExtResource("3_fcou2")]
offset_left = 1301.0
offset_top = 89.0
offset_right = 1301.0
offset_bottom = 89.0

[node name="CodeEditorNode" parent="." instance=ExtResource("4_tjm7a")]
offset_left = 1242.0
offset_top = 94.0
offset_right = 1242.0
offset_bottom = 102.0

[node name="AnimationHandler" type="Node" parent="."]
script = ExtResource("20_xsjvk")

[node name="PopupAC" parent="." instance=ExtResource("22_ctva0")]
visible = false
z_index = 1
position = Vector2(801, 261)

[node name="PopupWA" parent="." instance=ExtResource("23_8fqt8")]
visible = false
z_index = 1
position = Vector2(670, 254)

[connection signal="hide_dialogue" from="AnimationNode1/Bytebeard" to="AnimationNode1/Dialogue" method="_on_bytebeard_hide_dialogue"]
[connection signal="hide_charles" from="AnimationNode1/Dialogue" to="AnimationNode1/Bytebeard" method="_on_dialogue_hide_charles"]
[connection signal="hide_info" from="AnimationNode1/Dialogue" to="AnimationNode1/InfoBox3" method="_on_dialogue_hide_info"]
[connection signal="show_info" from="AnimationNode1/Dialogue" to="AnimationNode1/InfoBox3" method="_on_dialogue_show_info"]
